Add SubscribeContract kafka event
